<resources>
    <string name="app_name">My Editor</string>
    <string name="search">Search</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="download">download</string>
    <string name="edit">edit</string>
    <string name="imagePoster">ImagePoster</string>
    <string name="recently_search">Recently Search</string>
    <string name="image_description">image_description</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="downloads">Downloads</string>
    <string name="icon">Icon</string>
    <string name="adjust">Adjust</string>
    <string name="draw">Draw</string>
    <string name="crop">Crop</string>
    <string name="filter">Filter</string>
    <string name="down_load">DownLoading</string>
    <string name="link_error">Link Error</string>
    <string name="contrast">CONTRAST</string>
    <string name="brightness">BRIGHTNESS</string>
</resources>
