<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.framgia.my_editor_02.screen.edit.EditPhotoViewModel"
            />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".screen.edit.EditPhotoFragment"
        >
        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:foregroundGravity="center"
            android:onClick="@{viewModel::onImageClicked}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:imgUrl="@{viewModel.mPhotoObservableField.urlImage.regular}"
            />
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewActionBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description"
                    android:padding="@dimen/dp_16"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/textViewPhotoDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{viewModel.mPhotoObservableField.description}"
                    android:textColor="@color/colorBlueGrey700"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageViewDownload"
                    app:layout_constraintStart_toEndOf="@+id/imageViewBack"
                    app:layout_constraintTop_toTopOf="@id/imageViewBack"
                    />
                <ImageView
                    android:id="@+id/imageViewDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description"
                    android:padding="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageViewBack"
                    bind:srcCompat="@drawable/dowload"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewEditAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:id="@+id/textViewFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp_8"
                    android:drawableTop="@drawable/ic_filter"
                    android:text="@string/filter"
                    android:textColor="@color/colorBlueGrey700"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewCrop"
                    app:layout_constraintEnd_toStartOf="@+id/textViewCrop"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/textViewCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp_8"
                    android:drawableTop="@drawable/ic_crop"
                    android:text="@string/crop"
                    android:textColor="@color/colorBlueGrey700"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewDraw"
                    app:layout_constraintEnd_toStartOf="@+id/textViewDraw"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewFilter"
                    />
                <TextView
                    android:id="@+id/textViewDraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:drawablePadding="@dimen/dp_8"
                    android:drawableTop="@drawable/ic_draw"
                    android:text="@string/draw"
                    android:textColor="@color/colorBlueGrey700"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewBrightness"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/textViewBrightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp_8"
                    android:drawableTop="@drawable/ic_brightness_contrast"
                    android:text="@string/adjust"
                    android:textColor="@color/colorBlueGrey700"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewDraw"
                    app:layout_constraintEnd_toStartOf="@+id/textViewIcon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewDraw"
                    />
                <TextView
                    android:id="@+id/textViewIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp_8"
                    android:drawableTop="@drawable/ic_smile"
                    android:text="@string/icon"
                    android:textColor="@color/colorBlueGrey700"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewBrightness"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewBrightness"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.constraint.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.mIsShowEditAction? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="cardViewEditAction,cardViewActionBar"
            />
    </android.support.constraint.ConstraintLayout>
</layout>
